first Draft of Study

--- a/01.Data.ipynb
+++ b/01.Data.ipynb
@@ -106,6 +106,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## **머신러닝 딥러닝은,**\n",
+    "### 과거의 **통계적 방법 만으로는 규칙을 찾기 어려운** 데이터에 대해서, \n",
+    "### **보다** <strike>상대적으로</strike> **정형화된 분석** 을 도와주는 **보조적 도구** 이다\n",
+    "#### <strike>그런데 그 정형화가 정형화가 아닌것 또한 함정</strike> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br><br>\n",
     "## **2 Let's Start**\n",
     "### **01 Coding 둘러보기**\n",
@@ -176,6 +186,9 @@
    "source": [
     "<br><br>\n",
     "## **2 Datum 객체 학습하기**\n",
+    "1. 객체 (숫자 : integer, float), 문자 : string)\n",
+    "1. 함수 \n",
+    "\n",
     "<br>\n",
     "### **01 숫자의 사칙연산**\n",
     "https://soooprmx.com/archives/4886 : 파이썬 내장함수\n",
@@ -187,7 +200,18 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "7.5\n",
+      "7\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# print() : 파이썬 내장함수\n",
     "# 숫자의 사칙연산\n",
@@ -276,28 +300,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "005390 is SamsungElectronic inc\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 매개변수를 활용한 문자 연산 (data)\n",
-    "codes = '005390'\n",
-    "print(codes + ' is SamsungElectronic inc')\n",
-    "\n",
-    "codes = 1234\n",
-    "# print(codes + ' is SamsungElectronic inc')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -317,14 +319,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **03 문자와 숫자의 전환 및 연산**\n",
-    "1. 문자와 숫자간 변환\n",
-    "1. 연산은 위의 01, 02의 규칙내에서 작동한다"
+    "### **03 문자와 숫자의 변환**\n",
+    "1. type()\n",
+    "1. str()\n",
+    "1. int()\n",
+    "1. float()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +337,7 @@
        "str"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +360,7 @@
        "6390"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +381,7 @@
        "int"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +403,7 @@
        "1234.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +423,7 @@
        "'1234'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,15 +431,6 @@
    "source": [
     "# integer to string\n",
     "str(code_int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# str(code_int) + 1000"
    ]
   },
   {
@@ -465,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +469,7 @@
        "5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +491,7 @@
        "[1, 2, 3, '회계', '재무', 2017]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +514,7 @@
        "[1, 2, 3, '회계', '재무', 2017, ['08-15', '22:00:30']]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,46 +526,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, '회계', '재무', 2017, ['08-15', '22:00:30'], ['Python', 'Jupyter']]"
+       "[[100, 200, 300], 1, 2, 3, '회계', '재무', 2017, ['08-15', '22:00:30']]"
       ]
      },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lists_txt = ['Python','Jupyter']\n",
-    "lists.append(lists_txt)\n",
-    "lists"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[100, 200, 300],\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " '회계',\n",
-       " '재무',\n",
-       " 2017,\n",
-       " ['08-15', '22:00:30'],\n",
-       " ['Python', 'Jupyter']]"
-      ]
-     },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +556,7 @@
      "output_type": "stream",
      "text": [
       "[100, 200, 300]\n",
-      "['Python', 'Jupyter']\n"
+      "['08-15', '22:00:30']\n"
      ]
     }
    ],
@@ -604,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +578,7 @@
      "text": [
       "[3, '회계', '재무']\n",
       "[[100, 200, 300], 1, 2]\n",
-      "[[100, 200, 300], 1, 2, 3, '회계', '재무', 2017]\n"
+      "[[100, 200, 300], 1, 2, 3, '회계', '재무']\n"
      ]
     }
    ],
@@ -627,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +601,7 @@
        "[1, 31, 51, 23, 19, 14, 4, 2, 5]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +626,7 @@
        "[1, 2, 4, 5, 14, 19, 23, 31, 51]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +647,7 @@
        "['ABC', 'Python', 'java', 'oracle', 'python', 'vba']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +669,7 @@
        "['라틴어', '미국', '영어', '일본어', '중국어', '한글', '히브리어']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,44 +682,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1\n",
-      "1 2\n",
-      "2 4\n",
-      "3 5\n",
-      "4 14\n",
-      "5 19\n",
-      "6 23\n",
-      "7 31\n",
-      "8 51\n",
-      "9 라틴어\n",
-      "10 미국\n",
-      "11 영어\n",
-      "12 일본어\n",
-      "13 중국어\n",
-      "14 한글\n",
-      "15 히브리어\n"
+      "라틴어\n",
+      "미국\n",
+      "영어\n",
+      "일본어\n",
+      "중국어\n",
+      "한글\n",
+      "히브리어\n"
      ]
     }
    ],
    "source": [
-    "# enumerate() : 열거하다 \n",
-    "# for 반복문에서 index 주소값을 활용하면 다양한 구성이 가능해서 많이 쓰인다\n",
-    "# list data와 index 주소값 2개를 함께 출력한다\n",
-    "list_data = list_num + list_string\n",
-    "for no, datum  in enumerate(list_data):\n",
-    "    print(no, datum)"
+    "for txt in list_string:\n",
+    "    print(txt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  번 index 데이터  라틴어\n",
+      "1  번 index 데이터  미국\n",
+      "2  번 index 데이터  영어\n",
+      "3  번 index 데이터  일본어\n",
+      "4  번 index 데이터  중국어\n",
+      "5  번 index 데이터  한글\n",
+      "6  번 index 데이터  히브리어\n"
+     ]
+    }
+   ],
+   "source": [
+    "# enumerate() : 열거하다\n",
+    "for no, txt in enumerate(list_string):\n",
+    "    print(no, ' 번 index 데이터 ', txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +805,7 @@
        "['한국항공우주', '047810', ['대우조선해양', '000300']]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,19 +817,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<br><br>\n",
     "### **02  { Dictionary_key :  _value } **\n",
-    "List 의 index를 보완한 객체로, index를 '숫자'와 'String' 가능)  \n",
-    "\n",
-    "DataFrame 표를 만들 수 있는 기본포맷"
+    "1. List 의 index를 보완한 객체로, index를 '숫자'와 'String' 가능)  \n",
+    "1. DataFrame 표를 만들 수 있는 기본포맷\n",
+    "1. [대괄호] 의 1) 데이터기능, 2) 함수기능"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +845,7 @@
        "{'005390': '삼성전자', '035420': ['네이버', 'NAVER', 'Naver', 'naver']}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -884,18 +868,19 @@
        "dict_keys(['005390', '035420'])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# key : index 를 대체하는 개념\n",
     "dictionary.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +889,7 @@
        "dict_values(['삼성전자', ['네이버', 'NAVER', 'Naver', 'naver']])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -924,19 +909,22 @@
        "['네이버', 'NAVER', 'Naver', 'naver']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# index로 데이터 추출\n",
+    "# [] 의 데이터기능, 함수기능 \n",
+    "# 1. [ list ] 데이터\n",
+    "# 2. [ 인덱싱/ 슬라이싱 ] 조건 함수\n",
     "dictionary['035420']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +935,7 @@
        " '035420': ['네이버', 'NAVER', 'Naver', 'naver']}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +957,7 @@
        "dict_keys(['Debit', 'Credit'])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +984,7 @@
        "{'Cash': 700000, 'Lease': 1300000}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1004,7 @@
        "dict_keys(['Lease', 'Cash'])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1024,7 @@
        "dict_values([1300000, 700000])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1061,6 +1049,7 @@
    ],
    "source": [
     "# .items()\n",
+    "# 메소드 : 객체에 종속된 함수\n",
     "# Key 값과, value를 함께 출력한다\n",
     "for idx, datum  in  sheet.items():\n",
     "    print(idx, datum)"
@@ -1068,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1117,19 +1106,23 @@
        "Lease        NaN  1300000"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# DataFrame : Python에서 범용되는 표 데이터 type\n",
+    "# key 값 : DataFrame의 컬럼명\n",
+    "# key 종속된 key 값 : DataFrame의 index\n",
+    "\n",
     "import pandas as pd\n",
     "pd.DataFrame(sheet)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1193,7 @@
        "dict_items([('005390', '삼성전자'), ('035420', '네이버')])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1222,19 +1215,18 @@
        "2"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(items)\n",
-    "#items[0]"
+    "len(items)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1235,7 @@
        "[('005390', '삼성전자'), ('035420', '네이버')]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1257,7 @@
        "('005390', '삼성전자')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1278,7 @@
        "tuple"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,24 +1289,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "005390 삼성전자\n"
+      "005390\n",
+      "삼성전자\n"
      ]
     }
    ],
    "source": [
-    "print(samsung[0],samsung[1]) \n",
-    "\n",
+    "print(samsung[0])\n",
+    "print(samsung[1]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-48-eaf1341eaa65>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# samsung[0] = 'samsung'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0msamsung\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'000660'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
     "# tuple 은 입력 후 수정이 불가능하다\n",
     "# 고유한 값을 지정이 필요한 경우에만 활용\n",
-    "# samsung[0] = 'samsung'"
+    "# samsung[0] = 'samsung'\n",
+    "\n",
+    "samsung[0] = '000660'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
