--- a/05.Pandas_Static.ipynb
+++ b/05.Pandas_Static.ipynb
@@ -12,12 +12,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **review**\n",
-    "1. Datum(숫자, \"문자\"), Data([list], {dict}, (tuple,))\n",
-    "1. (기본/외부/사용자) 모듈, 함수, 메소드\n",
-    "1. []의 문자에서 활용( [index], [:slicing]), 함수를 활용{for : 반복, if :판단, enumerate() :순번 integer 출력}\n",
-    "1. 재무제표 Web Crawling ==> type 변경 ==> 시각화\n",
-    "1. ndarray, Series, Dataframe"
+    "<br>\n",
+    "### **review Python Data & Datum**\n",
+    "Python 기본문법 - 기본문법 등을 아래의 3가지 서랍속에 체계적 정리하기 \n",
+    "1. Datum &nbsp;&nbsp; : &nbsp;&nbsp; 숫자, &nbsp;\"문자\" \n",
+    "1. Data &nbsp;&nbsp; : &nbsp; [list], &nbsp; {dict}, &nbsp; (tuple,)\n",
+    "1. Function : indent, 모듈, 클래스, 함수, 메소드(추가 입력값 필요, 추가 입력값 불필요)\n",
+    "1. []의 함수적 활용 \n",
+    "    1. 색인기능 [index], [:slicing])\n",
+    "    1. 함수를 활용하여 데이터 생성 &nbsp; [ &nbsp; datum &nbsp;&nbsp; 1) for : 반복, 2) if :판단, 3) enumerate() :순번 integer 출력 ]\n",
+    "1. {}의 함수적 활용 \n",
+    "    1. 함수를 활용하여 데이터 생성 &nbsp; { &nbsp; key &nbsp; : &nbsp; value &nbsp;&nbsp; 1) for : 반복, 2) if :판단, 3) enumerate() :순번 integer 출력}\n",
+    "1. 연결기호 : ', \", '=',  [], {}, () (개별적 쓰임새와 숨은 의미들이 정해져 있다)"
    ]
   },
   {
