--- a/05.Python_finance.ipynb
+++ b/05.Python_finance.ipynb
@@ -15,40 +15,29 @@
    "source": [
     "<br><br>\n",
     "## <strong>1 금융 시계열 데이터 결측치 처리 / 보간법\n",
-    "pandas를 활용한 데이터 정렬 및 보간법"
+    "https://github.com/pydata/pandas-datareader\n",
+    "1. pandas를 활용한 데이터 정렬 및 보간법\n",
+    "1. 금융데이터 크롤링 모듈 설치방법 (2018.06 기준)\n",
+    "1. ! pip install git+https://github.com/pydata/pandas-datareader.git --upgrade\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 downloaded\n",
-      "[*********************100%***********************]  1 of 1 downloaded\n",
-      "[*********************100%***********************]  1 of 1 downloaded\n",
-      "[*********************100%***********************]  1 of 1 downloaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from pandas_datareader import data\n",
-    "import fix_yahoo_finance as yf\n",
-    "yf.pdr_override()\n",
-    "\n",
+    "from pandas_datareader import get_data_yahoo\n",
     "start_date = '2013-01-01'\n",
     "codes = ['GM', 'KO', '005930.KS', '000660.KS']\n",
     "result = {}\n",
     "for code in codes:\n",
-    "    result[code] = data.get_data_yahoo(code, start_date).Close"
+    "    result[code] = get_data_yahoo(code, start_date).Close"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,10 +61,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>000660.KS</th>\n",
-       "      <th>005930.KS</th>\n",
        "      <th>GM</th>\n",
        "      <th>KO</th>\n",
+       "      <th>005930.KS</th>\n",
+       "      <th>000660.KS</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
@@ -88,38 +77,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2012-12-31</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>28.830000</td>\n",
        "      <td>36.250000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-01-02</th>\n",
-       "      <td>26600.0</td>\n",
-       "      <td>31520.0</td>\n",
        "      <td>29.129999</td>\n",
        "      <td>37.599998</td>\n",
+       "      <td>31520.0</td>\n",
+       "      <td>26600.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-01-03</th>\n",
-       "      <td>26650.0</td>\n",
-       "      <td>30860.0</td>\n",
        "      <td>29.820000</td>\n",
        "      <td>37.599998</td>\n",
+       "      <td>30860.0</td>\n",
+       "      <td>26650.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            000660.KS  005930.KS         GM         KO\n",
+       "                   GM         KO  005930.KS  000660.KS\n",
        "Date                                                  \n",
-       "2012-12-31        NaN        NaN  28.830000  36.250000\n",
-       "2013-01-02    26600.0    31520.0  29.129999  37.599998\n",
-       "2013-01-03    26650.0    30860.0  29.820000  37.599998"
+       "2012-12-31  28.830000  36.250000        NaN        NaN\n",
+       "2013-01-02  29.129999  37.599998    31520.0    26600.0\n",
+       "2013-01-03  29.820000  37.599998    30860.0    26650.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,23 +116,22 @@
    "source": [
     "import pandas as pd\n",
     "prices = pd.DataFrame(result)\n",
-    "price.to_csv('./data/stock.csv', encoding=\"ms949\")\n",
     "prices.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "000660.KS    73\n",
-      "005930.KS    73\n",
-      "GM           40\n",
-      "KO           40\n",
+      "GM           41\n",
+      "KO           41\n",
+      "005930.KS    74\n",
+      "000660.KS    74\n",
       "dtype: int64\n"
      ]
     }
@@ -154,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -178,10 +166,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>000660.KS</th>\n",
-       "      <th>005930.KS</th>\n",
        "      <th>GM</th>\n",
        "      <th>KO</th>\n",
+       "      <th>005930.KS</th>\n",
+       "      <th>000660.KS</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
@@ -193,39 +181,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2018-05-11</th>\n",
-       "      <td>86100.0</td>\n",
+       "      <th>2018-06-01</th>\n",
+       "      <td>43.200001</td>\n",
+       "      <td>43.119999</td>\n",
        "      <td>51300.0</td>\n",
-       "      <td>36.889999</td>\n",
-       "      <td>42.139999</td>\n",
+       "      <td>91400.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-05-14</th>\n",
-       "      <td>85400.0</td>\n",
-       "      <td>50100.0</td>\n",
-       "      <td>36.630001</td>\n",
-       "      <td>42.040001</td>\n",
+       "      <th>2018-06-04</th>\n",
+       "      <td>43.779999</td>\n",
+       "      <td>43.490002</td>\n",
+       "      <td>51100.0</td>\n",
+       "      <td>89800.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-05-15</th>\n",
-       "      <td>84300.0</td>\n",
-       "      <td>49400.0</td>\n",
-       "      <td>36.630001</td>\n",
-       "      <td>42.040001</td>\n",
+       "      <th>2018-06-05</th>\n",
+       "      <td>43.779999</td>\n",
+       "      <td>43.490002</td>\n",
+       "      <td>51300.0</td>\n",
+       "      <td>91000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            000660.KS  005930.KS         GM         KO\n",
+       "                   GM         KO  005930.KS  000660.KS\n",
        "Date                                                  \n",
-       "2018-05-11    86100.0    51300.0  36.889999  42.139999\n",
-       "2018-05-14    85400.0    50100.0  36.630001  42.040001\n",
-       "2018-05-15    84300.0    49400.0  36.630001  42.040001"
+       "2018-06-01  43.200001  43.119999    51300.0    91400.0\n",
+       "2018-06-04  43.779999  43.490002    51100.0    89800.0\n",
+       "2018-06-05  43.779999  43.490002    51300.0    91000.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,6 +221,7 @@
    "source": [
     "prices = prices.fillna(method='ffill')\n",
     "prices = prices.dropna()                \n",
+    "prices.to_csv('./data/stock.csv', encoding=\"ms949\")\n",
     "prices.tail(3)"
    ]
   },
@@ -1972,11 +1961,8 @@
     }
    ],
    "source": [
-    "from pandas_datareader import data\n",
-    "import fix_yahoo_finance as yf\n",
-    "yf.pdr_override()\n",
-    "\n",
-    "price_temp = data.get_data_yahoo('000660.KS', '2017-01-01')"
+    "from pandas_datareader import get_data_yahoo\n",
+    "price_temp = get_data_yahoo('000660.KS', '2017-01-01')"
    ]
   },
   {
