--- a/06-1.Predict - HMM.ipynb
+++ b/06-1.Predict - HMM.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "<br><br>\n",
     "## **1 은닉 마르코프 모델을 활용 (HMM)**\n",
-    "<img src=\"https://kimdoky.github.io//img/post/python/crawling/p2c8_1.png\" width='300' align='left'>"
+    "<img src=\"https://i.stack.imgur.com/rx8kj.png\" width='400' align='left'>"
    ]
   },
   {
